# phazor

./: .gitignore  LICENSE  README.md  ROADMAP.md  cargo.toml
.cargo/: config.toml
phazor_core/: Cargo.toml
phazor_core/examples/: native_sender.rs  rest_receiver.rs
phazor_core/src/: lib.rs
phazor_core/src/datasink/: fake.rs  mod.rs  rest_http.rs  rest_rexie.rs
phazor_core/src/outbox/: api.rs  backoff.rs  mod.rs  service.rs  store.rs  store_idb.rs  store_mem.rs  types.rs
phazor_core/src/util/: now.rs
phazor_frontend/: Cargo.toml  index.html
phazor_frontend/src/: lib.rs
phazor_web/: Cargo.toml  Trunk.toml  index.html
phazor_web/src/: lib.rs
phazor_web/src/components/: hello.rs  home.rs  info.rs  router.rs
phazor_web/src/hooks/: mod.rs  outbox_ops.rs
phazorc/: Cargo.toml  build.rs
phazorc/src/: ast.rs  generator.rs  lib.rs  parser.rs  tree_walker.rs
phazorc/tests/: debug_tree.rs  golden_components.rs
phazorc/tests/fixtures/expected/: home.rs  router.rs
phazorc/views/: about.phz  hello.phz  home.phz  info.phz
tree-sitter-phz/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-phz/bindings/node/: binding.cc
tree-sitter-phz/bindings/rust/: lib.rs
tree-sitter-phz/src/: grammar.json  node-types.json  parser.c
