[package]
name = "phazor_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = []
fake = []    # expose the fake sink

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v5", "serde"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
log = "0.4.27"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
