[package]
name = "phazor_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
wasm-logger = "0.2"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
