[package]
name = "phazorc"
version = "0.1.0"
edition = "2024"

[lib]
name = "phazorc"
path = "src/lib.rs"

[[bin]]
name = "phazorc"
path = "src/bin/main.rs"

[dependencies]
convert_case = "0.6"
regex = "1.11.1"
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"          # for temp dirs to emit into
similar = "2"
