[package]
name = "tree-sitter-phz"
description = "phz grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "phz"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-phz"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"
required-features = ["native"]

[features]
native = []

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"


